# fun_poker

./: Cargo.toml  build.rs  docker-compose.yml  fun_poker.sln  nginx.conf  request.lua
LlamaBot/: .gitignore  server.py
auth-service/: DataSeeder.cs  DbContext.cs  Dockerfile.dev  Program.cs  auth-service.csproj
auth-service/Controllers/: AuthController.cs
auth-service/Migrations/: 20240607152426_Init.Designer.cs  20240607152426_Init.cs  PostgresDbContextModelSnapshot.cs
auth-service/Properties/: launchSettings.json
auth-service/Services/: TokenService.cs
core-app/: .gitignore  Cargo.toml  build.rs
core-app/src/: card.rs  dealer.rs  dealer_pool.rs  game.rs  game_orchestrator.rs  lib.rs  lobby.rs  main.rs  player.rs  postgres_database.rs  responses.rs  socket_pool.rs  thread_pool.rs
core-app/src/database/: feed.sql  schema.sql
core-app/src/protos_rs/: ai_bot_player.rs  card.rs  client_state.rs  empty.rs  game_state.rs  google.protobuf.rs  lobby.rs  player.rs  requests.rs  responses.rs  user.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
game-cordinator-service/: go.mod  main.go
protos/: ai_bot_player.proto  card.proto  client-state.proto  client_request.proto  client_state.proto  empty.proto  game_state.proto  join-lobby.request.proto  lobby.proto  player.proto  requests.proto  responses.proto  user.proto
src/: card.rs  dealer.rs  lib.rs  lobby.rs  main.rs  player.rs  postgres_database.rs  request.rs  socket_pool.rs
src/database/: queries_examples.sql
src/protos_rs/: client_request.rs  (+3 more)
(+46 files in other folders)
