[package]
name = "fun_poker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19.7"
prost = "0.12.4"
tungstenite = "=0.21.0"
rand = "0.8.5"
pokereval_cactus = "0.1.2"
ureq = "2.9.7"

[build-dependencies]
prost-build = "0.12.4"
prost-types = "0.12"